# Nimzo-Backend

./: .gitignore  CHANGELOG.md  Dockerfile  FEATURED_DECKS_FRONTEND_NOTES.md  Gambit.cabal  LICENSE  README.md  changes.md  docker-compose.yml  endpoint.md  init_db.sql  thumbnail.md
app/: Main.hs
docs/: frontend-endpoints.md
initdb/: 00_create_test_db.sql  01_schema_tables.sql  02_card_triggers.sql  02_update_rank.sql  03_social_auth.sql  03_update_rank.sql  04_onboarding_preferences.sql  05_anonymous_onboarding_progress.sql  07_deck_search_metadata.sql  08_deck_search_metadata_functions_triggers.sql  09_deck_search_metadata_backfill.sql  10_deck_images.sql  11_deck_promotion_metadata.sql  12_remove_resurrected_deleted_decks.sql  13_featured_deck_lines.sql  14_featured_card_on_decks.sql  15_android_emails.sql  16_experiments.sql  18_user_explanation_views.sql  19_user_card_view_fen.sql  20_feedback.sql  21_deck_browser_fen_index.sql  22_user_card_view_likelihood.sql
scripts/: featured_deck_lines_smoke_check.sql  smoke_deck_search_metadata.sql
src/App/: API.hs  AppM.hs  Async.hs  Auth.hs  Config.hs  Env.hs  Error.hs  Mail.hs  Options.hs  Server.hs  SocialAuth.hs
src/Models/: AndroidEmail.hs  Card.hs  Deck.hs  DeckDetails.hs  DeckImage.hs  DeckPromotion.hs  DeckRating.hs  DeckSearch.hs  Experiment.hs  FeaturedSource.hs  Feedback.hs  Onboarding.hs  Rank.hs  SocialAuth.hs  User.hs  UserCardView.hs  UserDeckView.hs  UserExplanationView.hs  UserIdentity.hs  Watermelon.hs
src/Repo/: AndroidEmail.hs  Card.hs  Classes.hs  Deck.hs  Experiment.hs  Feedback.hs  Onboarding.hs  Rank.hs  User.hs  UserCardView.hs  UserDeckView.hs  UserExplanationView.hs  UserIdentity.hs  Utils.hs  Xp.hs
src/Repo/Deck/: Media.hs  Promotion.hs  Query.hs  Validation.hs
src/Routes/: Android.hs  Auth.hs  Card.hs  Deck.hs  Experiment.hs  Onboarding.hs  User.hs  Watermelon.hs
src/Watermelon/: Watermelon.hs
test/: Spec.hs  TestHelpers.hs
test/Repo/: DeckSpec.hs  OnboardingSpec.hs  UserSpec.hs
test/Routes/: AndroidSpec.hs  AuthSpec.hs  DeckSpec.hs  ExperimentSpec.hs  UserSpec.hs  WatermelonSpec.hs
